--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,19 @@
 eureka:
   client:
-	  register-with-eureka: true
-		fetch-registry: true
-		service-url:
-		  defaultZone: http://localhost:8761/eureka/
-	instance:
-	  hostname: localhost
-		prefer-ip-address: true
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+
+microservice:
+  payment-service:
+    endpoints:
+      endpoint:
+        uri: http://PaymentService/payment/dopayment
+  order-service:
+    endpoints:
+      endpoint:
+        uri: http://OrderService/order/bookorder
